# xlasisku.github.io

./: Cargo.toml  events.js  helper.js  index.html  jvoptions.html  readme.md  style.css  worker.js
.github/workflows/: jvs-update.yml
data/: allwords.txt  chars.txt  unofficial_rafsi_maybe.txt
src/: main.rs
