[package]
name = "scripts"
version = "0.1.0"
edition = "2024"

[dependencies]
htmlentity = "1.3.2"
latkerlo-jvotci = "2.3.0"
quick-xml = "0.37.4"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
xml-rs = "0.8.26"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
